--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ torch @ https://download.pytorch.org/whl/cu121/torch-2.3.0%2Bcu121-cp310-cp310-l
 torchvision @ https://download.pytorch.org/whl/cu121/torchvision-0.18.0%2Bcu121-cp310-cp310-linux_x86_64.whl#sha256=13e1b48dc5ce41ccb8100ab3dd26fdf31d8f1e904ecf2865ac524493013d0df5
 tqdm==4.66.4
 wandb==0.17.0
+Flask==2.2.5
